fix alignment of content on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,8 @@
 /***************************/
 
 body {
-  /*padding-top: 50px;
-  	background: url('/images/chuck-brown-dcsoulrecordings-min.jpg') no-repeat fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: 33%;
-	width:100%;
-	height:100%;*/
-	  	background: url('/images/chuckb-overlay.jpg') no-repeat fixed;
-  	/*background: url('/images/chuckb-streetart-1024.jpg') no-repeat fixed;*/
-	-webkit-background-size: cover;
+	background: url('/images/chuckb-overlay.jpg') no-repeat fixed;
+  	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	font-family: 'Archivo Narrow', sans-serif;
@@ -42,15 +33,14 @@ span.number {
 }
 
 .givethemansomeroom {
-	/*padding-left:16.15%;*/
 	margin: 0px auto;
 	max-width:66%;
+	min-width:320px;
 }
 
 
 .givethemansomeroom .col-lg-12 {
-		min-width:450px;
-		min-height:500px;
+	min-height:500px;
 }
 
 p { 
@@ -58,12 +48,14 @@ p {
 	padding-bottom:20px;
 	letter-spacing: 2px;
 }
+
 .bands {
 	position: fixed;
 	left 0;
 	width:100%;
 	height:100%;
 }
+
 .bands .band {
 	height:18px;
 	width:100%;
